--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ main{
 
 .listWrapper{
   background-color: white;
+  border-radius: 10px;
 }
 
 .btn-primary{
@@ -50,7 +51,7 @@ main{
 .disable .form-control {
   text-decoration: line-through;
 }
-.delete_button {  
+/* .delete_button {  
     content: "";
     width: 24px;
     height: 24px;
@@ -61,6 +62,6 @@ main{
     background-position : center center;
     background-repeat:no-repeat;
     background-image :url(../to-do-list/img/delete_icon.png)
-}
+} */
 
 
