--- a/style.css
+++ b/style.css
@@ -7,18 +7,18 @@
 
 
 :root {
-    --textColor: #3a3a3a;
-    --green: #94B49F;
-    --teal: #CEE5D0;
-    --beige: #FCF8E8;
-    --orange: #ECB390;
+  --textColor: #535353;
+  --green: #94B49F;
+  --teal: #CEE5D0;
+  --beige: #FCF8E8;
+  --orange: #ECB390;
 }
 
 body {
-  color: black;
+  color: var(--textColor);
 }
 
-.bg{
+.bg {
   background-image: url(img/layered-waves-haikei\ \(2\).svg);
   background-size: cover;
   position: absolute;
@@ -27,30 +27,51 @@ body {
   z-index: -1;
 }
 
+.rowHeight {
+  height: 75vh;
+}
+
 h1 {
   font-family: 'Roboto', Helvetica, sans-serif;
+  color: var(--textColor);
 }
 
 h2, h3, h4, h5, h6 {
   font-family: '', Helvetica, sans-serif;
+  color: var(--textColor);
 }
 
-main{
+main {
   height: 100vh;
 }
 
-.listWrapper{
-  background-color: white;
+.listWrapper {
+  background-color: var(--beige);
   border-radius: 10px;
 }
 
-.btn-primary{
-  background-color: #ECB390;
+.btn-primary {
+  background-color: var(--orange);
+  border: none;
+  box-shadow: none;
+}
+
+.btn-primary:focus, .btn-primary:active, .btn-primary:hover {
+  background-color: var(--green);
+  border: none;
+  box-shadow: none;
 }
 
 .disable .form-control {
   text-decoration: line-through;
 }
+
+.form-control {
+  background-color: white;
+  border-top-left-radius: .375rem !important;
+  border-bottom-left-radius: .375rem !important;
+}
+
 /* .delete_button {  
     content: "";
     width: 24px;
@@ -64,4 +85,33 @@ main{
     background-image :url(../to-do-list/img/delete_icon.png)
 } */
 
+.form-check-input:focus {
+  box-shadow: none;
+  border-color: var(--orange);
+}
 
+.form-check-input:checked {
+  background-color: var(--orange);
+  border-color: var(--orange);
+}
+
+.form-control:focus {
+  color: #212529;
+  background-color: #fff;
+  border-color: #ecb390a7;
+  outline: 0;
+  box-shadow: none;
+}
+
+.input-group-text {
+  background-color: transparent;
+  border: none;
+}
+
+hr {
+  border-color: var(--green);
+  opacity: 0.5;
+  width: 100%;
+  margin: auto;
+  margin-top: 20px;
+}
